# MASR-MultiAgentSatelliteRouting

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  config.py  main.py  models.py
backend/agents/: __init__.py  base.py  ground_station.py  satellite.py
backend/api/: app.py  schemas.py
backend/engine/: __init__.py  runner.py  scheduler.py  simulation_engine.py
backend/messaging/: __init__.py  bus.py
backend/metrics/: collector.py
backend/orbital/: __init__.py  model.py
backend/routing/: __init__.py  policies.py  strategies.py
docs/: IMPLEMENTATION-SPECIFICATION.md  OPERATIONS.md
frontend/: index.html  package-lock.json  package.json  styles.css  tsconfig.json
frontend/controls/: README.md
frontend/renderer/: README.md
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/components/: Controls.tsx  Metrics.tsx
frontend/src/renderer/: camera.ts  canvas.ts  draw.ts  engine.ts
frontend/src/store/: useStore.ts
frontend/src/ui/: Controls.tsx  Metrics.tsx
frontend/src/websocket/: client.ts
frontend/websocket/: client.js
tests/: test_api_contracts.py  test_chaos_and_metrics.py  test_determinism.py  test_phase4_chaos_and_metrics.py  test_phase5_routing_plugins.py  test_phase6_priority_congestion.py  test_priority_congestion.py  test_routing_and_congestion.py  test_routing_plugins.py
