[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masr"
version = "0.1.0"
description = "Deterministic Multi-Agent Satellite Routing simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.10.0",
  "websockets>=12.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]
